--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 
-  [svelte-1640638710].toast-container, [svelte-1640638710] .toast-container {
+  [svelte-17148720].toast-container, [svelte-17148720] .toast-container {
     position: fixed;
     z-index: 999;
   }
-  [svelte-1640638710].top, [svelte-1640638710] .top {
+  [svelte-17148720].top, [svelte-17148720] .top {
     top: 15px;
   }
-  [svelte-1640638710].bottom, [svelte-1640638710] .bottom {
+  [svelte-17148720].bottom, [svelte-17148720] .bottom {
     bottom: 15px;
   }
-  [svelte-1640638710].left, [svelte-1640638710] .left {
+  [svelte-17148720].left, [svelte-17148720] .left {
     left: 15px;
   }
-  [svelte-1640638710].right, [svelte-1640638710] .right {
+  [svelte-17148720].right, [svelte-17148720] .right {
     right: 15px;
   }
-  [svelte-1640638710].center, [svelte-1640638710] .center {
+  [svelte-17148720].center, [svelte-17148720] .center {
     left: 50%;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
   }
-  [svelte-1640638710].toast, [svelte-1640638710] .toast {
+  [svelte-17148720].toast, [svelte-17148720] .toast {
     height: 38px;
     line-height: 38px;
     padding: 0 20px;
@@ -36,27 +36,20 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  [svelte-1640638710].info, [svelte-1640638710] .info {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+  [svelte-17148720].info, [svelte-17148720] .info {
     background-color: #0091EA;
   }
-  [svelte-1640638710].success, [svelte-1640638710] .success {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+  [svelte-17148720].success, [svelte-17148720] .success {
     background-color: #4CAF50;
   }
-  [svelte-1640638710].error, [svelte-1640638710] .error {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+  [svelte-17148720].error, [svelte-17148720] .error {
     background-color: #F44336;
   }
-  [svelte-1640638710].default, [svelte-1640638710] .default {
+  [svelte-17148720].default, [svelte-17148720] .default {
+    background-color: #353535;
+  }
+  [svelte-17148720].anim, [svelte-17148720] .anim {
     opacity: 1;
     -webkit-transform: translateY(0);
     transform: translateY(0);
-    background-color: #353535;
   }
